fix alignment issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -249,4 +249,8 @@ a:hover
   cursor: pointer;
   margin-left: 10px;
 }
+p, ol, ul, td {
+  margin: 0px;
+}
+
 /**/
